# ORB_SLAM3

./: .gitignore  CLAUDE.md  CMakeLists.txt  PointCloud.ply  check_depth_quality.sh  rs_enumerate_devices.txt  run_orb_slam.py  run_orb_slam_noIMU.py  run_rgbd_recorded.py  test_imu_rate.sh  view_trajectory_pointcloud.py
.claude/: settings.local.json
Examples/Monocular/: RealSense_D435i_new.yaml
Examples/Monocular-Inertial/: RealSense_D435i_mono_optimized.yaml  RealSense_D435i_new.yaml
Examples/RGB-D/: RealSense_D435.yaml  RealSense_D435i_new.yaml  rgbd_euroc.cc  rgbd_realsense_D435.cc  rgbd_recorded.yaml
Examples/RGB-D-Inertial/: RealSense_D435i_new.yaml
Examples/ROS/: .gitignore  README.md
Examples/ROS/ORB_SLAM3/: CMakeLists.txt  package.xml
Examples/ROS/ORB_SLAM3/launch/: orb_slam3_only.launch.py  realsense_d435i.launch.py  stereo_inertial_d435i.launch.py
Examples/ROS/ORB_SLAM3/src/: ros2_stereo_inertial.cc
Examples/Stereo/: RealSense_D435.yaml  RealSense_D435i_new.yaml  RealSense_D435i_stereo.yaml  stereo_realsense_D435.cc  stereo_realsense_D435i_wide.cc
Examples/Stereo-Inertial/: RealSense_D435i_easyFeature.yaml  RealSense_D435i_new.yaml  stereo_inertial_euroc.cc  stereo_inertial_realsense_D435i_FPS15.cc  stereo_inertial_realsense_D435i_wide.cc
SGBM/: README.md  STEREO_EUROC_USAGE.md  TSDF_GUIDE.md  dense_reconstruction.py  requirements_dense_recon.txt  requirements_tsdf.txt  run_dense_reconstruction.py  run_tsdf_fusion.py  test_sgbm.py  tsdf_fusion.py  verify_setup.py  visualize_mesh.py
include/: System.h
install/: local_setup.sh  setup.sh
src/: Settings.cc  Sim3Solver.cc  System.cc
test_output/: depth_test.npy
